<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.nk.test.metrics</groupId>
	<artifactId>Measure</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		
		<spring.version>3.2.13.RELEASE</spring.version>
	</properties>
	<dependencies>


		<dependency>
			<groupId>com.codahale.metrics</groupId>
			<artifactId>metrics-jvm</artifactId>
			<version>3.0.1</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>


	</dependencies>
	<build>
	 <plugins>
	  <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-compiler-plugin</artifactId>
    <version>3.7.0</version>
    <configuration>
        <release>9</release>
        <compilerArgs>
            <arg>--add-modules</arg>
            <arg>javax.xml.bind</arg>
        </compilerArgs>
    </configuration>
</plugin>
	 </plugins>
	</build>

</project>